# lightning-xpu

./: .gitignore  README.md  lightning_install_2.3.sh  lightning_install_2.7.sh  pyproject.toml  run_toy_example.sh  run_toy_example_2.3.sh  run_toy_example_2.7.sh  toy_example.py
docs/: lightning_modifications.md
examples/: run_toy_example.sh  run_toy_example_2.3.sh  run_toy_example_2.7.sh  toy_example.py
install/: lightning_install_2.3.sh  lightning_install_2.7.sh  lightning_install_2.8.sh
lightning_xpu/: xpu.py
src/lightning_xpu/: __init__.py  xpu.py
src/lightning_xpu/fabric/: __init__.py
src/lightning_xpu/fabric/strategies/: __init__.py  ddp.py  deepspeed.py  fsdp.py  model_parallel.py
src/lightning_xpu/fabric/utilities/: __init__.py  distributed.py
src/lightning_xpu/lightning/: __init__.py
src/lightning_xpu/lightning/fabric/: __init__.py
src/lightning_xpu/lightning/fabric/strategies/: __init__.py  ddp.py  deepspeed.py  fsdp.py  model_parallel.py
src/lightning_xpu/lightning/fabric/utilities/: __init__.py  distributed.py
src/lightning_xpu/lightning/pytorch/: __init__.py
src/lightning_xpu/lightning/pytorch/accelerators/: __init__.py  xpu.py
src/lightning_xpu/lightning/pytorch/strategies/: ddp.py  deepspeed.py  fsdp.py  model_parallel.py
src/lightning_xpu/pytorch/: __init__.py
src/lightning_xpu/pytorch/accelerators/: __init__.py  xpu.py
src/lightning_xpu/pytorch/strategies/: __init__.py  ddp.py  deepspeed.py  fsdp.py  model_parallel.py
src/lightning_xpu/pytorch/trainer/: __init__.py  setup.py
tests/: test_xpu.py
(+6 files in other folders)
